swagger api with pagination
